# slj1660-macos-printer

./: .gitignore  Cargo.toml  Install SL-J1660.command  LICENSE  README.md  THIRD_PARTY_NOTICES.md  Uninstall SL-J1660.command
docs/: architecture.md  capture-analysis.md  capture-guide.md  macos-setup.md  protocol-notes.md
examples/: printer_class.rs  rest_status.rs
fixtures/captured-confirmed/: black-rectangle.raw  blank-page.raw  checkerboard.raw  horizontal-lines.raw  text-only.raw
fixtures/confirm/: cartridge-refilled-ok.http  lowink-continue.http  single-cartridge-ok.http  tray-empty-or-open-resume.http
scripts/: build-macos-bundle.sh  doctor-macos-printer.sh  install-local-ipp-printer.sh  install-macos-printer.sh  list-usb.sh  print-pdf-mode10.py  print-test.sh  print-text-mode10.py  print-via-ipp.sh  replay-confirmed-text.sh  resume-feed-attention.sh  run-ipp-server.sh  send-raw.sh  setup-macos.sh
src/: cli.rs  encoder.rs  ipp.rs  lib.rs  main.rs  mode10.rs  raster.rs  raw.rs  usb.rs
tests/: cli_smoke.rs
